# py-i18n-api-sample

./: .gitignore  Makefile  pyproject.toml
app/fastapi/: app.py  colors_router.py  foods_router copy.py  house_router.py
app/flask/: app.py  colors_router.py  foods_router.py  house_router.py
app/libs/: exception.py  translation.py
app/libs/translation/: selector.py  text.py  translator.py
app/libs/translation/fastapi/: translator_response.py
app/libs/translation/flask/: flask_language_selector.py  translator_json_provider.py
app/text_samples/: colors.py  foods.py  house.py
locale/es-ar/LC_MESSAGES/: colors.po  foods.po  house.po
locale/jp/LC_MESSAGES/: colors.po  foods.po  house.po
locale/pt-br/LC_MESSAGES/: colors.po  foods.po  house.po
