[tool.poetry]
name = "py-i18n-api-sample"
version = "0.1.0"
description = ""
authors = ["Pablo1Gustavo <pablo1gustavo.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
flask = {extras = ["async"], version = "^3.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
